<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_info_url">http://roundware.example.com/info</string>
<string name="explore_url">http://roundware.example.com/explore</string>
<string name="refine_url">"file:///android_asset/listen-a.html"</string>
<string name="filter_url">"file:///android_asset/speak-a.html"</string>

<string name="app_name">Roundware Example</string>
<string name="app_title">Roundware Example</string>
<string name="action_settings">Settings</string>
<string name="title_activity_listen">Listen</string>
<string name="title_activity_speak">Speak</string>
<string name="title_activity_prefs">Preferences</string>
<string name="title_activity_explore">Explore More</string>
<string name="title_activity_refine">Refine</string>

<!-- general text items -->
<string name="save">Save</string>
<string name="erase">Erase</string>
<string name="exit">Exit</string>
<string name="initializing">Initializing</string>
<string name="preferences">Preferences</string>
<string name="info">Legal Notice</string>
<string name="legal_notice_title">Legal Notice</string>
<string name="notification_title">Roundware Example</string>
<string name="notification_default_text">Return to Roundware Example</string>
<string name="error_title">Roundware Error</string>
<string name="message_title">Roundware Message</string>
<string name="record_counter_zero">0:00</string>
<string name="confirm_title">Confirm</string>
<string name="confirm_message">Are you sure you want to delete your recording and re-record it?</string>
<string name="confirm_sharing_message">Do you want to submit your last recording?</string>
<string name="confirm_sharing_title">Tell a Friend</string>
<string name="confirm_sharing_ok">OK</string>
<string name="confirm_sharing_cancel">No Thanks</string>
<string name="confirm_exit">Pending Uploads</string>
<string name="sharing_subject">Roundware Sharing</string>
<string name="sharing_chooser_title">Share Recording</string>
<string name="starting_playback_title">Starting Playback</string>
<string name="updating_stream_title">Updating Audio</string>
<string name="thank_you_for_participating">Thank You for participating!</string>
<string name="cannot_delete_queue">Cannot delete queue at the moment.</string>

<!-- feedback submitted (thank you) message -->
<string name="feedback_submitted_title">Thank You</string>
<string name="feedback_submitted_message">
    Your feedback is important to us.  We will review it shortly.
</string>

<string name="play_services_not_installed">Google Play services is not installed on this device.</string>

<!-- info text about app version and used open source licenses -->
<string name="version_and_licenses_text">
    \nThis app is built on the open-source Roundware audio augmented
    reality platform (roundware.org). It also makes use
    of Google Maps, Google Play Services and the Picasso image
    library (by Square, Inc.).
    \n
</string>

<!-- info text when user denies one or more critical permissions for app functionality -->
<string name="permissions_for_location_denied">
    \nThis app is location based, and really needs to be
    able to figure out where you are in the world to work properly.
    Please start again and grant the requested permissions. Thank you!
    \n
</string>

<string name="permissions_for_recording_denied">
    \nThe requested permissions are needed so the app can make
    a recording of your voice and store it locally before it will
    be transmitted to our servers. Please try again and grant the
    requested permissions. Thank you!
    \n
</string>

<!-- dialog messages -->
<string name="unable_to_retrieve_configuration">
    Unable to load project configuration from server or
    cache. Please exit the app, check connectivity and try again.
</string>
<string name="unable_to_retrieve_webcontent">
    Unable to load the web content for the app from the server.
    Please exit the app, check connectivity and try again.
</string>
<string name="starting_playback_message">
    Waiting for audio from server, one moment please.
</string>
<string name="playback_skip_ahead_message">
    Skipping ahead. One moment please while the server
    handles your request and updates the audio stream.
</string>
<string name="playback_replay_message">
    Replay recording. One moment please while the server
    handles your request and updates the audio stream.
</string>
<string name="connecting_to_server_message">
    Establishing connection to the server, one moment
    please.</string>
<string name="confirm_exit_message">There are still
    recordings waiting to be uploaded. Do you want to
    erase them or save them so uploading will automatically
    continue next time you run the app?
</string>
<string name="playing_static_soundtrack_msg">
    You are listening to a sample audio stream. Please go to
    the venue location to experience the real deal!
</string>
<string name="connection_to_server_lost_play">
    Connection to server lost. Please exit the app, check
    connectivity, and try again.
</string>
<string name="connection_to_server_lost_record">
    Connection to server lost. Making recordings is still
    possible but they will be queued and uploaded when the
    connection is restored.
</string>
<string name="connection_to_server_failed">
    Connecting to Roundware service failed.
</string>
<string name="recording_submit_problem">
    Uh oh, there was a problem submitting your recording
    probably due to technical issues. We do apologize and
    would appreciate it if you try again later.
</string>
<string name="modify_stream_problem">
    Uh oh, there was a problem modifying the audio stream
    probably due to technical issues. The audio you
    hear might no longer match your selections. Please
    try selecting again, or restart the app and try again.
</string>
<string name="skip_ahead_stream_problem">
    Uh oh, there was a problem modifying the audio stream
    probably due to connectivity issues. The audio you
    hear may no longer match your selections. Please
    try selecting again, or restart the app and try again.
</string>
<string name="play_asset_in_stream_problem">
    Uh oh, there was a problem modifying the audio stream
    probably due to connectivity issues. The audio you
    hear may no longer match your selections. Please
    try selecting again, or restart the app and try again.
</string>
<string name="vote_asset_problem">
    Uh oh, there was a problem submitting your vote
    probably due to connectivity issues. We apologize and
    would appreciate it if you try again later.
</string>

<!-- label text items -->
<string name="listen_main_header_text">Listen</string>
<string name="speak_submitted_header_text">Thank You!</string>
<string name="speak_submitted_recording_text">Your recording is currently being uploaded to Roundware Example. It will be available for everyone to hear momentarily!</string>
<string name="speak_feedback_header_text">Leave Feedback</string>
<string name="speak_feedback_message_text">Please tell us what you think about Roundware Example.</string>

<!-- button text items -->
<string name="button_feedback">RECORD FEEDBACK</string>
<string name="button_cancel_sharing">No, Thanks!</string>

<!-- Home screen content descriptions (for Talk Back) -->
<string name="home_screen_description">Roundware Example</string>
<string name="home_listen_button_description">Listen</string>
<string name="home_speak_button_description">Speak</string>
<string name="home_info_button_description">Info</string>
<string name="home_web_button_description">Web</string>
<string name="home_feedback_button_description">Record feedback</string>
<string name="home_info_close_button_description">Close</string>

<!-- Listen screen content descriptions (for Talk Back) -->
<string name="listen_title">Listen</string>
<string name="done">Done</string>
<string name="listen_main_screen_description">You are listening to</string>
<string name="listen_main_home_button_description">Home</string>
<string name="record_button">Record</string>
<string name="refine_button">Refine</string>
<string name="action_home">Home</string>
<string name="action_explore">Explore</string>

<!-- Speak screen content descriptions (for Talk Back) -->
<string name="speak_screen_description">Speak</string>
<string name="speak_main_screen_description">Make a recording</string>
<string name="speak_instructions_record">1. Record</string>
<string name="speak_instructions_listen">2. Listen</string>
<string name="speak_instructions_upload">3. Upload</string>
<string name="speak_record_button_description">record button</string>
<string name="speak_rerecord_button_description">re-record button</string>
<string name="speak_submit_button_description">upload button</string>
<string name="speak_cancel_button_description">cancel button</string>
<string name="speak_submitted_screen_description">Recording uploaded - thank you!</string>
<string name="speak_submitted_speak_again_description">Speak Again</string>
<string name="speak_submitted_listen_more_description">Listen More</string>
<string name="agreement">Agreement</string>
<string name="accept">Accept</string>
<string name="decline">Decline</string>
<string name="cancel">CANCEL</string>
<string name="default_speak_question">What do you want to talk about?</string>

<string name="please_wait">Please wait…</string>
<string name="done_btn_label">Done</string>
<string name="listen_more">Listen More</string>
<string name="speak_more_btn_label">Record Another</string>


<!-- Refine screen -->
<string name="refine_title">Refine</string>
<string name="refine_question">Who do you want to hear?</string>
<string name="refine_help">Select from the options below</string>
<string name="community_button">Community</string>
<string name="museum_button">Museum</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>


</resources>
