<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ImageView
        android:id="@+id/background"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_refine"
        />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title_bar"
            android:id="@+id/title_bar"/>

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:contentDescription="@string/speak_screen_description"
            android:inAnimation="@anim/in_from_right"
            android:orientation="vertical"
            android:outAnimation="@anim/out_to_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SpeakActivity">

            <!-- Who do you want to hear -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/Text.Title"
                    android:text="@string/refine_question"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/refine_help"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    >

                    <RelativeLayout
                        android:id="@+id/community_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Text"
                            android:gravity="center"
                            android:text="@string/refine_help"
                            android:background="@drawable/bubble_bg"/>

                        <View
                            android:id="@+id/community_overlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/museum_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Text"
                            android:gravity="center"
                            android:text="@string/refine_help"
                            android:background="@drawable/bubble_bg"/>

                        <View
                            android:id="@+id/museum_overlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <SeekBar
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </ViewFlipper>
    </LinearLayout>
</FrameLayout>